Switch to dsc order

--- a/.floe/config.json
+++ b/.floe/config.json
@@ -6,7 +6,7 @@
       "title": "Changelog",
       "list": {
         "orderBy": "date",
-        "direction": "asc",
+        "direction": "dsc",
         "pagesDirectory": "changelog"
       }
     },
