--- a/.floe/config.json
+++ b/.floe/config.json
@@ -2,39 +2,43 @@
   "$schema": "https://unpkg.com/@floe/schema/1.0-alpha.1/schema.json",
   "sections": [
     {
-      "url": "changelog",
-      "title": "Changelog",
-      "list": {
-        "orderBy": "date",
-        "direction": "dsc",
-        "pagesDirectory": "changelog"
+      "title": "Welcome",
+      "pageView": {
+        "path": "welcome"
       }
     },
     {
-      "url": "docs",
       "title": "Docs",
-      "stack": {
-        "pages": [
-          "docs/introduction",
-          "docs/motivation",
-          {
-            "title": "Getting Started",
-            "pages": [
-              "docs/getting-started/installation",
-              "docs/getting-started/usage",
-              {
-                "title": "Next Steps",
-                "pages": ["docs/getting-started/next-steps/yolo"]
-              }
-            ]
-          }
-        ]
+      "pages": [
+        {
+          "title": "Introduction",
+          "pageView": "docs/introduction"
+        },
+        {
+          "title": "Motivation",
+          "pageView": "docs/motivation"
+        },
+        {
+          "title": "Getting Started",
+          "pages": [
+            {
+              "title": "Installation",
+              "pageView": "docs/getting-started/installation"
+            },
+            {
+              "title": "Usage",
+              "pageView": "docs/getting-started/usage"
+            }
+          ]
+        }
+      ]
+    },
+    {
+      "title": "Changelog",
+      "dataView": {
+        "path": "changelog",
+        "direction": "dsc"
       }
     }
-  ],
-  "pageOptions": {
-    "docs/introduction": {
-      "title": "Intro"
-    }
-  }
+  ]
 }
