Fix path to introduction

--- a/.floe/config.json
+++ b/.floe/config.json
@@ -5,9 +5,9 @@
       "title": "Docs",
       "pages": [
         {
-          "title": "Index",
+          "title": "Introduction",
           "pageView": {
-            "path": "docs/index"
+            "path": "docs/introduction"
           }
         },
         {
